# code-review

./: .gitignore  Justfile  pyproject.toml  todo.db
app/: __init__.py  routes.py
app/models/: todo.py  user.py
app/templates/: admin.html  base.html  create-user.html  index.html  login.html  profile.html  register.html
