[tool.poetry]
name = "code-review"
version = "0.1.0"
description = ""
authors = ["Mike Lloyd <mike.lloyd@teradata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0.0"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.2"
werkzeug = "^2.0"
flask-bootstrap = "^3.3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
